--- a/src/styles/Layout.css
+++ b/src/styles/Layout.css
@@ -1,21 +1,35 @@
-.layout {
+/* .wrapper {
   display: grid;
-  grid-template-columns: 1.5fr 3fr 1fr;
-  grid-template-rows: 1fr 8fr;
-  margin: auto;
-  row-gap: 1em;
-  column-gap: 1em;
-  justify-content: center;
-  justify-items: center;
-  justify-content: space-evenly;
-  background-color: #ffffff;
-  height: 100%;
+} */
+
+body {
+  background-color: #fbf7ed;
+}
+.navbar {
+  grid-area: navbar;
+  background: #008060;
+  padding-bottom: 12px;
+}
+.content-container {
+  display: grid;
+  grid-template-areas: "nominations search";
+  grid-template-columns: 400px auto;
 }
 
-.navbar {
-  grid-area: 1 / 1 / span 1 / span 3;
-  align-self: start;
-  justify-self: center;
-  background: #008060;
-  width: 100%;
+.nominations {
+  grid-area: nominations;
+}
+
+.search {
+  grid-area: search;
+}
+/* Media Queries */
+@media (max-width: 700px) {
+  /* For mobile phones: */
+  .content-container {
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      "nominations"
+      "search";
+  }
 }
