--- a/src/styles/Layout.css
+++ b/src/styles/Layout.css
@@ -6,7 +6,8 @@ body,
 }
 
 body {
-  background-color: #fbf7ed;
+  /* background-color: #fbf7ed; */
+  background-color: white;
 }
 
 .wrapper {
@@ -23,6 +24,7 @@ body {
   display: grid;
   grid-template-areas: "nominations search";
   grid-template-columns: 400px auto;
+  gap: 1em;
 }
 
 .nominations {
@@ -32,6 +34,7 @@ body {
 
 .search {
   grid-area: search;
+  height: 600px;
 }
 
 /* Media Queries */
@@ -45,5 +48,9 @@ body {
   }
   .nominations {
     height: 350px;
+    margin: 1em;
+  }
+  .search {
+    margin: 1em;
   }
 }
